--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,19 +92,19 @@ hr {
 	width: 100%;
 	height: 100%;
 	color: white;
-	top: 49%;
-    left: 47.9%;
+	top: 65vh;
+    left: 47.5vw;
 	z-index: 10000001;
 }
 
 #loader {
     display: block;
     position: relative;
-    left: 50%;
-    top: 50%;
+    left: 45vw;
+    top: 40vh;
     width: 150px;
     height: 150px;
-    margin: -75px 0 0 -75px;
+    /*margin: -75px 0 0 -75px;*/
     border-radius: 50%;
     border: 3px solid transparent;
     border-top-color: #3498db;
