--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,11 +89,13 @@ hr {
 }
 
 .abs {
+    display: inline-block;
     color: white;
-    position: absolute;
+    float: left;
+    position: relative;
     width: 100%;
     height: 100%;
-    top: 60vh;
+    top: 55vh;
     z-index: 10000001;
     text-align: center;
 }
