--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,23 @@ html {
 
 body::-webkit-scrollbar { width: 0 !important }
 
+nav ul li a {
+    padding: 2px 0 0 0;
+    position: relative;
+    display: block;
+    font-size: 12px;
+    color: #999999;
+    letter-spacing: 0.1em;
+    font-weight: 500;
+    line-height: 14px;
+    text-transform: uppercase;
+    -moz-transition: all 0.5s ease-in-out 0s;
+    -ms-transition: all 0.5s ease-in-out 0s;
+    -o-transition: all 0.5s ease-in-out 0s;
+    -webkit-transition: all 0.5s ease-in-out 0s;
+    transition: all 0.5s ease-in-out 0s;
+}
+
 .navbar-effect {
     background-color: rgba(247, 247, 247, 0.75);
     transition: all 0.7s ease;
@@ -19,7 +36,7 @@ body::-webkit-scrollbar { width: 0 !important }
 }
 
 .movie-filter {
-    height: 100vh;
+    height: 98vh;
 }
 
 .header-bh {
@@ -188,6 +205,13 @@ hr {
     -ms-transform: translateX(0); /* IE 9 */
     transform: translateX(0); /* Firefox 16+, IE 10+, Opera */
 }
+.section-title {
+    margin-bottom: 70px;
+}
+.paddsection {
+    padding-top: 90px;
+    padding-bottom: 90px;
+}
 
 #loader-wrapper .loader-section.section-left {
     left: 0;
@@ -305,27 +329,24 @@ hr {
 }
 
 .row.rowCenter {
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
+    align-content: center;
 }
 
-.fixCols {
-    flex-grow: 0;
-}
+
 
 .Content-Box {
-    width: 318px;
-    height: 350px;
+    width: 100%;
+    height: 280px;
     background-color: #f9f9f9;
     border: 1px solid #e9e9e9;
     border-top-color: rgb(233, 233, 233);
     border-top-style: solid;
     border-top-width: 1px;
     border-top: 3px solid #e9e9e9;
+    border-radius: 15px;
     margin-top: 20px;
     padding: 25px 1px 0;
-    /*margin-bottom: 15px;*/
+    margin-bottom: 15px;
 }
 
 .Content-Box-White {
@@ -357,4 +378,202 @@ hr {
 }
 .iconSize {
     font-size: 4rem;
+}
+
+.parallax {
+    background-image: url('../img/bg.jpg');
+    height: 250px;
+    background-attachment: fixed;
+    background-position: left;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#skills {
+    width: 100%;
+    height: auto;
+    padding-top: 190px;
+    padding-bottom: 140px;
+}
+
+#aboutMe {
+    width: 100%;
+    height: auto;
+    background: #f7f7f7;
+    padding-top: 190px;
+    padding-bottom: 140px;
+}
+
+#aboutMe p {
+    color: #999999;
+}
+
+#aboutMe .div-img-bg {
+    padding-bottom: 30px;
+    border: 20px solid #b8a07e;
+}
+
+#aboutMe .div-img-bg .about-img img {
+    width: 100%;
+    box-shadow: 0px 0px 85px 0px rgba(0, 0, 0, 0.14);
+    margin-top: -60px;
+    margin-left: 40px;
+    height: 400px;
+    object-fit: cover;
+}
+
+#aboutMe .about-descr .p-heading {
+    font-size: 28px;
+    text-align: left;
+}
+
+#aboutMe .about-descr .seperator {
+    max-width: 80%;
+    margin-bottom: 0;
+    text-align: left;
+}
+
+#portfolio {
+
+    padding-bottom: 150px;
+    padding-top: 150px;
+}
+
+/***
+
+
+Efeitos Portfolio
+
+
+ ***/
+
+#portfolio {
+    width: 100%;
+}
+
+.hovereffect {
+    width:100%;
+    height:100%;
+    float:left;
+    overflow:hidden;
+    position:relative;
+    text-align:center;
+    cursor:default;
+}
+
+.hovereffect .overlay {
+    width:100%;
+    height:100%;
+    position:absolute;
+    overflow:hidden;
+    top:0;
+    left:0;
+    opacity:0;
+    background-color:rgba(0,0,0,0.5);
+    -webkit-transition:all .4s ease-in-out;
+    transition:all .4s ease-in-out
+}
+
+.hovereffect img {
+    display:block;
+    position:relative;
+    -webkit-transition:all .4s linear;
+    transition:all .4s linear;
+}
+
+.hovereffect h2 {
+    text-transform:uppercase;
+    color:#fff;
+    text-align:center;
+    position:relative;
+    font-size:17px;
+    background:rgba(0,0,0,0.6);
+    -webkit-transform:translatey(-100px);
+    -ms-transform:translatey(-100px);
+    transform:translatey(-100px);
+    -webkit-transition:all .2s ease-in-out;
+    transition:all .2s ease-in-out;
+    padding:10px;
+}
+
+.hovereffect a.info {
+    text-decoration:none;
+    display:inline-block;
+    text-transform:uppercase;
+    color:#fff;
+    border:1px solid #fff;
+    background-color:transparent;
+    opacity:0;
+    filter:alpha(opacity=0);
+    -webkit-transition:all .2s ease-in-out;
+    transition:all .2s ease-in-out;
+    margin:50px 0 0;
+    padding:7px 14px;
+}
+
+.hovereffect a.info:hover {
+    box-shadow:0 0 5px #fff;
+}
+
+.hovereffect:hover img {
+    -ms-transform:scale(1.2);
+    -webkit-transform:scale(1.2);
+    transform:scale(1.2);
+}
+
+.hovereffect:hover .overlay {
+    opacity:1;
+    filter:alpha(opacity=100);
+}
+
+.hovereffect:hover h2,.hovereffect:hover a.info {
+    opacity:1;
+    filter:alpha(opacity=100);
+    -ms-transform:translatey(0);
+    -webkit-transform:translatey(0);
+    transform:translatey(0);
+}
+
+.hovereffect:hover a.info {
+    -webkit-transition-delay:.2s;
+    transition-delay:.2s;
+}
+
+.overlay a {
+    font-size: 14px;
+}
+
+.fixImage {
+    width: 100%;
+    height: 210px !important;
+}
+
+.btn-hover {
+    font-size: 32px;
+    color: grey;
+}
+
+.fa-facebook:hover {
+    color: #4267B2;
+}
+.fa-linkedin:hover {
+    color: #0077B5;
+}
+.fa-github:hover {
+    color: white;
+}
+
+.footer-copyright {
+    color: white;
+}
+
+@media only screen and (max-width: 600px) {
+    #aboutMe .div-img-bg .about-img img {
+        width: 100%;
+        box-shadow: 0px 0px 85px 0px rgba(0, 0, 0, 0.14);
+        margin-top: -40px;
+        margin-left: 20px;
+        height: 400px;
+        object-fit: cover;
+    }
 }
