--- a/Projects/WebForms/assets/css/style.css
+++ b/Projects/WebForms/assets/css/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0px;
     padding: 0px;
-    background-image: url('/assets/img/bg.jpg');
+    background-image: url('../../assets/img/bg.jpg');
     background-attachment: fixed;
     background-size: cover;
     color: white;
