--- a/Projects/WebForms/assets/css/style.css
+++ b/Projects/WebForms/assets/css/style.css
@@ -1,14 +1,40 @@
+body, html {
+    height: 100%;
+    scroll-behavior: smooth;
+}
 body {
+	position: relative;
     margin: 0px;
     padding: 0px;
     background-image: url('../../assets/img/bg.jpg');
     background-attachment: fixed;
     background-size: cover;
     color: white;
+	overflow-y: hidden;
 }
 
-body, html {
-    height: 100%;
-    scroll-behavior: smooth;
-    overflow-y: hidden;
+.option1 {
+	width: 200px;
+	height: 30px;
+	background-color: rgba(255,255,255,0.2);
+    border: solid 1px;
+    border-radius: 5px;
+	margin-bottom: 10px;
+}
+
+.option1:hover {
+	background-color: rgba(255,255,255,0.5);
+}
+
+.option1 > input {
+	float: left;
+	margin-top: 8px;
+	margin-left: -100px;
+}
+
+.option1 > label {
+	margin-top: 1px;
+	float: right;
+	width: 100%;
+	font-size: 90%;
 }
