--- a/Projects/WebForms/assets/css/style.css
+++ b/Projects/WebForms/assets/css/style.css
@@ -10,7 +10,7 @@ body {
     background-attachment: fixed;
     background-size: cover;
     color: white;
-	overflow-y: hidden;
+	/*overflow-y: hidden;*/
 }
 
 .option1 {
@@ -88,15 +88,24 @@ body {
 	margin-left: 15px;
 }
 
-
-@keyframes fade-in {
-  0% { opacity: 0 }
-  50% { opacity: .5}
-  100% { opacity: 1 }
+.textTitle {
+	font-size: 1.5rem;
 }
 
-@keyframes fade-out {
-	0% { opacity: 1 }
-	50% { opacity: .5}
-	100% { opacity: 0 }
-  }
+#dpText {
+	background-color: rgba(255,255,255,0);
+	border: none;
+	margin-bottom: 25px;
+	margin-left: 5px;
+	color: white;
+	border-bottom: 1px solid rgba(255,255,255,0.2);
+}
+
+#dpText:focus {
+	outline: none;
+}
+
+.option3 {
+	font-size: 20px;
+	margin-left: 10%;
+}
