--- a/Projects/WebForms/assets/css/style.css
+++ b/Projects/WebForms/assets/css/style.css
@@ -109,3 +109,12 @@ body {
 	font-size: 20px;
 	margin-left: 10%;
 }
+
+textarea {
+	width: 50vw;
+	height: 15vh;
+	background-color: rgba(255,255,255,0);
+	color: white;
+	border: 1px solid rgba(255,255,255,0.2);
+	outline: none;
+}
