--- a/Projects/WebForms/assets/css/style.css
+++ b/Projects/WebForms/assets/css/style.css
@@ -1,148 +1,149 @@
-body, html {
-    height: 100%;
-    scroll-behavior: smooth;
+body,
+html {
+  height: 100%;
+  scroll-behavior: smooth;
 }
 body {
-	position: relative;
-    margin: 0px;
-    padding: 0px;
-    background-image: url('../../assets/img/bg.jpg');
-    background-attachment: fixed;
-    background-size: cover;
-    color: white;
-	overflow-y: hidden;
+  position: relative;
+  margin: 0px;
+  padding: 0px;
+  background-image: url("../../assets/img/bg.jpg");
+  background-attachment: fixed;
+  background-size: cover;
+  color: white;
+  overflow-y: hidden;
 }
 
 .option1 {
-	min-width: 200px;
-	max-width: 350px;
-	height: 30px;
-	background-color: rgba(255,255,255,0.2);
-    border: solid 1px;
-    border-radius: 5px;
-	margin-bottom: 10px;
-	margin-left: auto;
-	margin-right: auto;
+  min-width: 200px;
+  max-width: 350px;
+  height: 30px;
+  background-color: rgba(255, 255, 255, 0.2);
+  border: solid 1px;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .option1:hover {
-	background-color: rgba(255,255,255,0.5);
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .option1 > input {
-	position: relative;
-	margin-top: 8px;
+  position: relative;
+  margin-top: 8px;
 }
 
 .option1 > label {
-	margin-top: 1px;
-	float: right;
-	width: 100%;
+  margin-top: 1px;
+  float: right;
+  width: 100%;
 }
 
 .option2 {
-	margin: 15px;
+  margin: 15px;
 }
 
 .fixit {
-	font-size: 28px;
-	margin-bottom: 5px;
+  font-size: 28px;
+  margin-bottom: 5px;
 }
 
 .option2 > input {
-	max-width: 280px;
-	width: 100%;
-	background-color: rgba(255,255,255,0);
-	border: none;
-	border-bottom: 1px solid rgba(255,255,255,0.2);
-	color: white;
-	margin-bottom: 25px;
-	margin-top: 25px;
+  max-width: 280px;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0);
+  border: none;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  color: white;
+  margin-bottom: 25px;
+  margin-top: 25px;
 }
 
 .option2 > input:focus {
-	outline: none;
+  outline: none;
 }
 
 .option2 > input[placeholder] {
-	text-align: center;
+  text-align: center;
 }
 
 .browserOptions {
-	display: none;
-	width: 315px;
-	float: left;
+  display: none;
+  width: 315px;
+  float: left;
 }
 
 .browserOptions > .option1 {
-	width: 315px;
-	max-width: none;
-	text-align: left;
-	opacity: 1;
-	animation: fade-in 0.5s linear;
-	margin-bottom: 5px;
-	margin-top: 5px;
+  width: 315px;
+  max-width: none;
+  text-align: left;
+  opacity: 1;
+  animation: fade-in 0.5s linear;
+  margin-bottom: 5px;
+  margin-top: 5px;
 }
 
 .browserOptions > .option1 > span {
-	margin-left: 15px;
+  margin-left: 15px;
 }
 
 .textTitle {
-	font-size: 1.5rem;
+  font-size: 1.5rem;
 }
 
 #dpText {
-	background-color: rgba(255,255,255,0);
-	border: none;
-	margin-bottom: 25px;
-	margin-left: 5px;
-	color: white;
-	border-bottom: 1px solid rgba(255,255,255,0.2);
+  background-color: rgba(255, 255, 255, 0);
+  border: none;
+  margin-bottom: 25px;
+  margin-left: 5px;
+  color: white;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 #dpText:focus {
-	outline: none;
+  outline: none;
 }
 
 .option3 {
-	font-size: 20px;
-	margin-left: 10%;
+  font-size: 20px;
+  margin-left: 10%;
 }
 
 textarea {
-	width: 50vw;
-	height: 15vh;
-	background-color: rgba(255,255,255,0);
-	color: white;
-	border: 1px solid rgba(255,255,255,0.2);
-	outline: none;
+  width: 50vw;
+  height: 15vh;
+  background-color: rgba(255, 255, 255, 0);
+  color: white;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  outline: none;
 }
 
 .classificacao {
-	max-width: 50px;
-	min-width: 20px;
-	height: 100%;
-	display: inline-block;
+  max-width: 50px;
+  min-width: 20px;
+  height: 100%;
+  display: inline-block;
 }
 
 .pad {
-	margin-bottom: 25px;
+  margin-bottom: 25px;
 }
 
 .divider {
-	width: 50%;
-	height: 1px;
-	background-color: gray;
-	display: inline-block;
-	margin-bottom: 15px;
+  width: 50%;
+  height: 1px;
+  background-color: gray;
+  display: inline-block;
+  margin-bottom: 15px;
 }
 
 .contentText {
-	text-align: left;
+  text-align: left;
 }
 
 .resultsColorFix {
-	color: black;
-	text-align: left;
+  color: black;
+  text-align: left;
 }
