--- a/Projects/GoogleSearch/css/style.css
+++ b/Projects/GoogleSearch/css/style.css
@@ -10,41 +10,38 @@ body {
     background-color: red;
 }
 
-.card {
-    background-color: red;
-    border-radius: 5px;
+.SearchContent {
+    margin-top: 35px;
+    background-color: #b9b9c9;
+    padding-top: 24px;
+    border-radius: 15px;
 }
 
-.card-body {
-    text-align: center;
+.searchHolder {
+    padding: 15px;
 }
 
-.myForm {
-    top: 25px;
-    height: 90px;
-    text-align: center;
-    font-size: 2rem;
-    width: 333px;
-    margin: auto;
-    transition: 1s;
-    background-color: lavender;
-    border: none;
-    border-bottom: 1px solid #ced4da;
+.moreOption {
+    display: none;
+    transition: 0.3s;
 }
 
-.myForm:active {
-    background-color: lavender;
-    border: none;
-}
-input[type="textarea"]:focus {
-    background-color: initial;
-    outline: none !important;
+.resultsHolder {
+    margin-top: 35px;
+    background-color: #b9b9c9;
+    padding: 24px;
+    border-radius: 15px;
 }
 
-.myForm:hover {
-    width: 100%;
-    background-color: initial;
-    border: none;
-    background-color: lavender;
-    border-bottom: 1px solid #ced4da;
+.fixText {
+    margin: 10px;
+}
+
+.dropCanvas {
+    position: absolute;
+    background-color: gray;
+    margin-left: 36px;
+    margin-top: -16px;
+    width: 960px;
+    height: 250px;
 }
