--- a/Projects/GoogleSearch/css/style.css
+++ b/Projects/GoogleSearch/css/style.css
@@ -5,43 +5,28 @@ body {
     background-color: lavender;
 }
 
-/* For reaserch propuses */
-.colorTest {
-    background-color: red;
-}
-
-.SearchContent {
-    margin-top: 35px;
-    background-color: #b9b9c9;
-    padding-top: 24px;
-    border-radius: 15px;
-}
-
-.searchHolder {
-    padding: 15px;
-}
-
-.moreOption {
-    display: none;
-    transition: 0.3s;
-}
-
 .resultsHolder {
-    margin-top: 35px;
-    background-color: #b9b9c9;
-    padding: 24px;
-    border-radius: 15px;
+    display: flex;
+    flex-flow: row wrap;
+    width: 100%;
 }
 
-.fixText {
-    margin: 10px;
+.resultsList {
+    -webkit-box-flex: 1;
+    flex: auto;
+    height: 300px;
+    min-width: 100px;
 }
 
-.dropCanvas {
-    position: absolute;
-    background-color: gray;
-    margin-left: 36px;
-    margin-top: -16px;
-    width: 960px;
-    height: 250px;
+.result {
+    height: 220px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    float: left;
+}
+
+.imgFixed {
+    display: block;
+    width: 100%;
 }
