--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,7 @@ a:hover {
 }
 
 .background {
-    background-image: url("https://precisioninspectionsolutions.com/wp-content/uploads/2018/07/blurred-office-moving-background_rspzksh__F0000.png");
+    background-image: url("https://inspirationfeed.com/wp-content/uploads/2015/04/blurred-background.jpg");
     background-repeat: no-repeat;
-    background-size: 200%;
+    background-size: cover;
 }
